[tool.poetry]
name = "basilisk-docs"
description = "Basilisk Documentation"
version = "2.1.6"
authors = ["Basilisk Contributors"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "6.0"
pygments = "2.11.2"
myst-parser = "^0.18.1"
recommonmark = "0.7.1"
sphinx-scylladb-theme = "~1.3.1"
sphinx-autobuild = "2021.3.14"
Sphinx = "4.3.2"
sphinx-multiversion-scylla = "~0.2.11"
sphinx-sitemap = "2.2.0"
redirects_cli ="~0.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
